deploy/example-product-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example-product-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: example-product-service
    spec:
      containers:
        - image: docker.io/ryandjf/example-product-service:BUILD_VERSION
          imagePullPolicy: IfNotPresent
          name: example-product-service
          ports:
            - containerPort: 9090
