deploy/example-product-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-product-service
  labels:
    app: example-product-service
spec:
  type: NodePort
  ports:
    - port: 9090
      nodePort: 30909
      targetPort: 9090
      name: http
  selector:
    app: example-product-service
