deploy/example-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-product-service
  labels:
    app: example-product-service
spec:
  ports:
    - port: 9090
      name: http
  selector:
    app: example-product-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example-product-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: example-product-app
    spec:
      containers:
        - image: docker.io/ryandjf/example-product-service:BUILD_VERSION
          imagePullPolicy: IfNotPresent
          name: example-product-app
          ports:
            - containerPort: 9090
