deploy/myservice.yaml
##################################################################################################
# httpbin service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: my-app
        version: v1
    spec:
      containers:
      - image: docker.io/springio/gs-spring-boot-docker:latest
        imagePullPolicy: IfNotPresent
        name: my-app
        ports:
        - containerPort: 8080
