deploy/mysql-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: product-database
  labels:
    app: product-database
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: product-database
    tier: database

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: product-database
  labels:
    app: product-database
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: product-database
        tier: database
    spec:
      containers:
        - image: mysql:5.7
          name: product-database
          ports:
            - containerPort: 3306
              name: db
