deploy/petstore.yaml
##################################################################################################
# petstore service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: pet-service
  labels:
    app: petstore
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: petstore
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: petstore
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: petstore
        version: v1
    spec:
      containers:
      - image: ryandjf/example-product-service:latest
        imagePullPolicy: IfNotPresent
        name: petstore
        ports:
        - containerPort: 8080
