deploy/example-product-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-product
spec:
  hosts:
    - "*"
  gateways:
    - example-product-gateway
  http:
    - match:
        - uri:
            exact: /info
        rewrite:
          uri: /about
      route:
        - destination:
            host: example-product-service
            port:
              number: 9090
