deploy/example-product-service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-product-service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-product-service
spec:
  hosts:
  - "*"
  gateways:
  - example-product-service-gateway
  http:
  - match:
    route:
    - destination:
        host: example-product-service
        port:
          number: 9090
