deploy/petstore-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: petstore-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petstore
spec:
  hosts:
  - "*"
  gateways:
  - petstore-gateway
  http:
  - match:
    route:
    - destination:
        host: pet-service
        port:
          number: 8000
